syntax = 'proto3';
package com.linkedin.venice.protocols;

option java_multiple_files = true;

service VeniceReadService {
  rpc get (VeniceClientRequest) returns (VeniceServerResponse) {}
  rpc batchGet(VeniceClientRequest) returns (VeniceServerResponse) {}
  rpc countByValue(CountByValueRequest) returns (CountByValueResponse) {}
  rpc countByBucket(CountByBucketRequest) returns (CountByBucketResponse) {}
}

message VeniceClientRequest {
  uint32 partition = 1;
  string keyString = 2;           // used for single get
  bytes  keyBytes = 3;            // used for batch get
  string resourceName = 5;
  bool   isStreamingRequest = 7;
  bool   isRetryRequest = 8;
  bool   isBatchRequest = 9;

  string method = 10;
}

message VeniceServerResponse {
  sint32 schemaId = 1;
  bytes  data = 2;
  uint32 compressionStrategy = 3;
  uint32 responseRCU = 4;
  bool   isStreamingResponse = 5;

  uint32 errorCode = 6;
  string errorMessage = 7;
}

message CountByValueRequest {
  repeated bytes keys = 1;
  string resourceName = 2;
  int32 topK = 3;
  repeated string fieldNames = 4;
}

message CountByValueResponse {
  map<string, ValueCount> fieldToValueCounts = 1;
  uint32 errorCode = 2;
  string errorMessage = 3;
}

message ValueCount {
  map<string, int32> valueToCounts = 1;
}

// CountByBucket protocol - supports nested predicates
message BucketPredicate {
  oneof predicate_type {
    ComparisonPredicate comparison = 1;
    LogicalPredicate logical = 2;
  }
}

message ComparisonPredicate {
  string operator = 1;     // "GT", "GTE", "LT", "LTE", "EQ", "IN"
  string field_type = 2;   // "LONG", "INT", "FLOAT", "DOUBLE", "STRING"
  string value = 3;
}

message LogicalPredicate {
  string operator = 1;     // "AND", "OR"
  repeated BucketPredicate predicates = 2;
}

message CountByBucketRequest {
  repeated bytes keys = 1;
  string resourceName = 2;
  repeated string fieldNames = 3;
  map<string, BucketPredicate> bucketPredicates = 4;
}

message CountByBucketResponse {
  map<string, BucketCount> fieldToBucketCounts = 1;
  uint32 errorCode = 2;
  string errorMessage = 3;
}

message BucketCount {
  map<string, int32> bucketToCounts = 1;
}